Update and rename conf/conf.sh.dist to 会议/conf.sh.dist

--- a/会议/conf.sh.dist
+++ b/会议/conf.sh.dist
@@ -5,9 +5,9 @@
 #
 
 DB_CHARACTERS_CUSTOM_PATHS+=(
-	$MOD_NPC_EXP_RATESROOT"/sql/chars/"
+	$MOD_NPC_EXP_RATES_ROOT"/sql/chars/"
 )
 
 DB_WORLD_CUSTOM_PATHS+=(
-	$MOD_NPC_EXP_RATESROOT"/sql/world/"
+	$MOD_NPC_EXP_RATES_ROOT/sql/world/"
 )
