--- a/conf/conf.sh.dist
+++ b/conf/conf.sh.dist
@@ -5,7 +5,7 @@
 #
 
 DB_CHARACTERS_CUSTOM_PATHS+=(
-	"$MOD_NPC_EXP_RATES_ROOT"sql/chars/"
+	"$MOD_NPC_EXP_RATES_ROOT/sql/chars/"
 )
 
 DB_WORLD_CUSTOM_PATHS+=(
